<resources>
    <string name="app_name">OnlyBeer</string>
    <string name="loginTextview">Connexion</string>
    <string name="loginButton">Connexion</string>
    <string name="emailHint">Adresse mail</string>
    <string name="TextviewMainpage">Bienvenue sur la page principale</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="devInfo">Information sur le développeur :</string>
    <string name="Name">Nom : Cotton</string>
    <string name="first_name">Prénom : Ian</string>
    <string name="id">Matricule : 55019</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="aboutMenu">About</string>
    <string name="menu">Menu</string>
    <string name="_1">+1</string>
    <string name="register">S\'inscrire</string>
    <string name="mail">Mail</string>
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Confirmation</string>
    <string name="login">Login</string>
    <string name="register2">Inscription</string>
    <string name="swipe">SWIPE</string>
    <string name="favourite">FAVORIS</string>
    <string name="settings">PROFIL</string>
    <string name="onlybeer">Onlybeer</string>
    <string name="like">like</string>
    <string name="dislike">Dislike</string>
    <string name="register3">Register</string>
    <string name="d_j_inscrit_se_connecter">Déjà inscrit ? Se connecter</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pas_encore_de_compte_s_inscrire">Pas encore de compte ? S\'inscrire</string>
    <string name="image_de_la_bi_re">Image de la bière</string>
    <string name="votre_banni_re">Votre bannière</string>
    <string name="param_tres">Votre profil</string>
    <string name="profile_picture">Profile picture</string>
    <string name="username">Username</string>
    <string name="boutonmodifier">boutonModifier</string>
    <string name="votre_description">Votre description...</string>
    <string name="modifier">Modifier</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="favoris">Favoris</string>
    <string name="beer_image">beer image</string>
    <string name="beer_name">Beer Name</string>
    <string name="longue_description">Longue description</string>
    <string name="type">Type : </string>
    <string name="color">Couleur : </string>
    <string name="origine">Origine : </string>
    <string name="brewery">Brasserie : </string>
    <string name="localisation">Localisation</string>
    <string name="modifier_votre_description">Modifier votre description</string>
    <string name="saisissez_votre_description">Saisissez votre description</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="saisissez_votre_nom_d_utilisateur">Saisissez votre nom d\'utilisateur</string>
    <string name="modifier_votre_nom_d_utilisateur">Modifier votre nom d\'utilisateur</string>
</resources>