<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialogue"
    android:orientation="vertical"
    android:padding="16dp"
    android:textAlignment="textEnd">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/modifier_votre_description"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/custom_edittext2"
        android:hint="@string/saisissez_votre_description"
        android:inputType="textMultiLine"
        android:maxLength="160"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAlignment="textStart"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button_dislike"
            android:text="@string/annuler"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"

            android:text="@string/valider"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>